--- a/application.yaml
+++ b/application.yaml
@@ -7,3 +7,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+okta:
+  oauth2:
+      issuer: https://dev-80627210.okta.com/oauth2/default
+      audience: api://default
